--- a/paper/sec-intro.tex
+++ b/paper/sec-intro.tex
@@ -3,8 +3,12 @@ Language models (LMs) are one of the major and large components in many modern N
 %
 One approach for accurate language modeling is neural XX, but another is  count-based to harness the power of more data.
 %
+%The predominant approach to count-based language modelling is the $n$gram model, where a typical LM can contain as many as several hundred billions of $n$grams XX.
+%
 To be useful, LMs not only need to be accurate but they also need to be fast and compact.
 %
+%where the probability of a sequence of words is decomposed based on the chain rule ad approximatedusing the Markov assumption XX. 
+%A typical count-based LM can contain as many as several hundred billions of $n$grams
 In this paper, we build  fast and compact count-based language models on web-scale corpora using modern succinct data structures.
 %
 We show how to compactly index the text statistics needed by $n$gram language models, so that they can be queried efficiently to make the probabilities on the fly.       
@@ -12,6 +16,12 @@ We show how to compactly index the text statistics needed by $n$gram language mo
 Importantly, the stored index and text statistics are kept intact for $n$gram LMs with different orders (i.e. the context size), hence allow to relax the
 Markov assumption made in these LMs by considering very large contexts.
 
+
+Depending on the order $n$ and the training corpus size, a typical $n$gram LM contains as many as several hundred billions of $n$grams XX. 
+%
+
+
+%The predominant approach to count-based language modelling is the $n$gram model, where a typical LM can contain as many as several hundred billions of $n$grams XX.
 
   
 %A typical LM can contain as many as severl hundred billions of $n$gramsFor modern NLP systems 
