--- a/paper/sec-lm.tex
+++ b/paper/sec-lm.tex
@@ -30,7 +30,7 @@ P(w_i) &= \frac{\nlplus{\Bigcdot w_i}}{\nlplus{\Bigcdot\Bigcdot}} \, .
 \end{align}
 
 \newcite{chen1996empirical} report maximum likelihood estimates for the discount parameters, which simple functions of the corpus statistics for \ngrams occuring 1--4 times or occuring in 1--4 unique left contents. 
-Note that many other LM methods are defined in a similar manner to interpolated Kneser-Ney, using similar counts and occurrence counts for \mgram patterns.
+Note that many other LM methods are defined in a similar manner to interpolated Kneser-Ney, using similar counts and occurrence counts for \ngram patterns.
 Notably modified Kneser-Ney, proposed by~\newcite{chen1996empirical} typically outperforms interpolated Kneser-Ney by using context specific discount parameters.
 The implementation of this brings a few added complexities, which we leave for future work.
 
