space saving in 2.3

--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -18,7 +18,7 @@
 \newcommand{\rooot}[1]{\text{root}(#1)}
 \newcommand{\leaf}[2]{\text{leaf}(#2)}
 \newcommand{\size}[2]{\text{size}(#2)}
-\newcommand{\depth}[2]{\text{depth}(#2)}
+\newcommand{\depth}[2]{\text{string-depth}(#2)}
 \newcommand{\degree}[2]{\text{degree}(#2)}
 \newcommand{\edge}[3]{\text{edge}(#2, #3)}
 \newcommand{\children}[2]{\text{children}(#2)}
@@ -46,7 +46,7 @@
 \newcommand{\nlplusbacklfunc}[3]{\nlplusbacklname(#1, #2, #3)} % " ^ 2
 \newcommand{\nlplusfrontbackname}{\textsc{N1pFrontBack}}
 \newcommand{\nlplusfrontbackfunc}[4]{\nlplusfrontbackname(#1, #2, #3, #4)} % " 
-\newcommand{\nlplusfrontbacklname}{\textsc{N1pBack1}}
+\newcommand{\nlplusfrontbacklname}{\textsc{N1pFrontBack1}}
 \newcommand{\nlplusfrontbacklfunc}[3]{\nlplusfrontbacklname(#1, #2, #3)} % "
 
 \newcommand{\tf}{t_{\text{F}}}
