--- a/paper/sec-lm.tex
+++ b/paper/sec-lm.tex
@@ -28,11 +28,10 @@ The recursion stops with unigram probabilities,
 %\label{eq:low}
 P(w_i) &= \frac{\nlplus{\Bigcdot w_i}}{\nlplus{\Bigcdot\Bigcdot}} \, .
 \end{align*}
-
-\newcite{chen1996empirical} report maximum likelihood estimates for the discount parameters, which simple functions of the corpus statistics for \ngrams occuring 1--4 times or occuring in 1--4 unique left contents. 
+%\newcite{chen1996empirical} report maximum likelihood estimates for the discount parameters, as simple functions of the corpus statistics for \ngrams occuring 1--4 times or occuring in 1--4 unique left contents. 
 % Note that many other LM methods are defined in a similar manner to interpolated Kneser-Ney, using similar counts and occurrence counts for \ngram patterns.
 Modified Kneser-Ney, proposed by~\newcite{chen1996empirical}, typically outperforms interpolated Kneser-Ney by using context specific discount parameters.
-The implementation of this brings a few added complexities, which we leave for future work.
+The implementation of this in our approach brings a few added complexities, which we leave for future work.
 
 
 %%% Local Variables: 
