wording in section 4

--- a/paper/local.bib
+++ b/paper/local.bib
@@ -291,7 +291,7 @@
 
 % KenLM
 @inproceedings{heafield2011kenlm,
-  title={KenLM: Faster and smaller language model queries},
+  title={{KenLM}: Faster and smaller language model queries},
   author={Heafield, Kenneth},
   booktitle=wmt,
   pages={187--197},
@@ -300,8 +300,8 @@
 
 % SRI
 @inproceedings{stolcke2002srilm,
-  title={SRILM-an extensible language modeling toolkit.},
-  author={Stolcke, Andreas and others},
+  title={{SRILM}--An extensible language modeling toolkit},
+  author={Stolcke, Andreas},
   booktitle=interspeech,
   year={2002}
 }
@@ -345,7 +345,7 @@
 
 % Google 1T
 @article{brants2006web,
-  title={Web 1T 5-gram Version 1},
+  title={Web {1T} 5-gram Version 1},
   author={Brants, Thorsten and Franz, Alex},
   year={2006},
   journal={Linguistic Data Consortium},
@@ -354,7 +354,7 @@
 
 % Gigaword 5th Ed.
 @article{parker2011english,
-  title={English gigaword fifth edition, june},
+  title={English Gigaword fifth edition},
   author={Parker, Robert and Graff, David and Kong, Junbo and Chen, Ke and Maeda, Kazuaki},
   journal={Linguistic Data Consortium},
   number={LDC2011T07},
