--- a/paper/local.bib
+++ b/paper/local.bib
@@ -2,6 +2,7 @@
 @string{ acmpress = "ACM Press" }
 @string{ acmtois = "ACM Trans. Information Systems" }
 @string{ acmtods = "ACM Trans. Database Systems" }
+@string{ acmtalg = "ACM Trans. Algorithms" }
 @string{ cacm = "CACM" }
 @string{ adcs = "Proc. Aust. Doc. Comp. Symp." }
 @string{ cikm = "Proc. CIKM" }
@@ -39,6 +40,18 @@
 @string{ asru = "Proc. ASRU"}
 @string{ swat = "Proc. SWAT"}
 @string{ fsttcs = "Proc. FSTTCS"}
+
+
+@article{rno-talg11,
+  author    = {L. Russo and G. Navarro and A. Oliveira},
+  title     = {Fully-Compressed Suffix Trees},
+  journal   = acmtalg,
+  volume    = {7},
+  number    = {4},
+  pages     = {article 53},
+  year      = {2011}
+}
+
 
 @inproceedings{ofg-spire10,
   author    = {Enno Ohlebusch and Johannes Fischer and Simon Gog},
