--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -19,10 +19,13 @@
 \newcommand{\leaf}[2]{\text{leaf}(#1, #2)}
 \newcommand{\size}[2]{\text{size}(#1, #2)}
 \newcommand{\depth}[2]{\text{depth}(#1, #2)}
+\newcommand{\depths}[1]{\text{depth}(#1)}
 \newcommand{\degree}[2]{\text{degree}(#1, #2)}
+\newcommand{\degrees}[1]{\text{degree}(#1)}
 \newcommand{\edge}[3]{\text{edge}(#1, #2, #3)}
 \newcommand{\children}[2]{\text{children}(#1, #2)}
 \newcommand{\parent}[2]{\text{parent}(#1, #2)}
+\newcommand{\parents}[1]{\text{parent}(#1)}
 \newcommand{\backwardsearch}[4]{\text{backward-search}(#1, [#2,#3], #4)}
 \newcommand{\forwardsearch}[4]{\text{forward-search}(#1, [#2,#3], #4)} % I've abbreviated away depth, char_pos
 \newcommand{\intervalsymbols}[3]{\text{interval-symbols}(#1, [#2,#3])}
@@ -78,6 +81,9 @@
 \newcommand{\rankop}{\method{rank}}
 \newcommand{\selectop}{\method{select}}
 \newcommand{\SA}{\mbox{\emph{SA}}\xspace}
+
+\newcommand{\SASAMPLE}{\mbox{\emph{SAS}}\xspace}
+\newcommand{\ISASAMPLE}{\mbox{\emph{ISAS}}\xspace}
 
 %%% Local Variables: 
 %%% mode: latex
