--- a/paper/figures/fig-sa-bwt.tex
+++ b/paper/figures/fig-sa-bwt.tex
@@ -18,13 +18,16 @@
   ]
  (mat) at (0,0)
  {
- \# & t & o & n & r & s & t & p & i & t & T & \$ & t & n & r & s & t & p & i & t & n & \# & \$ \\
- \$ & \# & \# & \# & i & i & p & p & r & r & s & s & n & n & n & o & 16 & t & t & t & t & t & T \\
+ \node[draw=none]{0}; & \node[draw=none]{1}; & \node[draw=none]{2}; & \node[draw=none]{3}; & \node[draw=none]{4}; & \node[draw=none]{5}; & 
+ \node[draw=none]{6}; & \node[draw=none]{7}; & \node[draw=none]{8}; & \node[draw=none]{9}; & \node[draw=none]{10}; & \node[draw=none]{11}; &
+ \node[draw=none]{12}; & \node[draw=none]{13}; & \node[draw=none]{14}; & \node[draw=none]{15}; & \node[draw=none]{16}; & \node[draw=none]{17}; &
+ \node[draw=none]{18}; & \node[draw=none]{19}; & \node[draw=none]{20}; & \node[draw=none]{21}; & \node[draw=none]{22}; \\
+ \$ & \# & \# & \# & i & i & p & p & r & r & s & s & n & n & n & o & t & t & t & t & t & t & T \\
  22 & 21 & 11 & 0 & 18 & 8 & 17 & 7 & 14 & 4 & 15 & 5 & 20 & 13 & 3 & 2 & 16 & 6 & 19 & 12 & 1 & 9 & 10 \\
 \# & n & T &\$ &p &p &t &t &n &n  &r &r &t &t &o &t &s &s &i  &\# &\# &i &t \\
  };
 
-\node[left of=mat-1-1,node distance=.9cm] {\small $\col$};
+%\node[left of=mat-1-1,node distance=.9cm] {\small $i$};
 \node[left of=mat-2-1,node distance=.9cm] {\small $\col[\SA[i]]$};
 \node[left of=mat-3-1,node distance=.9cm] {\small \SA};
 \node[left of=mat-4-1,node distance=.9cm] {\small \colbwt};
